# myframework

./: .gitignore  build.gradle  config.gradle  gradle.properties  host.gradle  local.properties  settings.gradle  some_tip  version.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: progress_color.xml  shape_load_btn_bg.xml
app/src/main/res/layout/: activity_main.xml  activity_main2.xml  activity_main3.xml  activity_main4.xml  activity_setting.xml  activity_splash.xml  activity_up_date.xml  fragment_test.xml  item_home.xml  item_test_basequick_adapter.xml  item_version_updata_list.xml  layout_fragment_dialog.xml  view_custom_progress.xml
app/src/main/res/values/: attrs.xml  strings.xml
common/: build.gradle  fresco.pro  proguard-rules.pro  readme  retrofit2.pro
common/src/main/: AndroidManifest.xml
common/src/main/res/anim/: dialog_enter.xml  dialog_exit.xml  slide_left_in.xml  slide_left_out.xml  slide_right_in.xml  slide_right_out.xml
common/src/main/res/color/: selector_shop_text_color.xml
common/src/main/res/drawable/: scroll_bar.xml
common/src/main/res/layout/: activity_capture.xml  activity_default.xml  fragment_multi_image.xml  item_base_load_more.xml  layout_loading_error.xml  layout_refresh_header.xml  layout_top_net_error.xml  list_item_folder.xml  list_item_image.xml  tool_bar.xml
common/src/main/res/values/: color.xml  dimens.xml  ids.xml  strings.xml  styles.xml  title_attr.xml
common/src/main/res/xml/: file_paths.xml  network_security_config.xml
demo/: build.gradle  proguard-rules.pro
demo/src/main/: AndroidManifest.xml
demo/src/main/assets/webpage/: fullscreenVideo.html
demo/src/main/cpp/: CMakeLists.txt  Patch.cpp  TestLinkSo.cpp  TestLinkSoTwo.cpp  bspatch.c  com_example_demo_incremental_updating_BsPatch.h  com_example_demo_incremental_updating_TestLinkSo.h  com_example_demo_incremental_updating_TestLinkSoTwo.h
demo/src/main/cpp/header/: bzlib_private.h  com_zhang_BsDiff.h  com_zhang_TestJni.h  err.h  my.h
demo/src/main/cpp/source/: blocksort.c  bsdiff.c  bzlib.c  compress.c  crctable.c  decompress.c  err.cpp  huffman.c  my.cpp  randtable.c
demo/src/main/res/anim/: alpha_person.xml  rotate_person.xml  scale_person.xml  (+1 more)
demo/src/main/res/anim-v21/: path_interpolator.xml
gradle/wrapper/: gradle-wrapper.properties
jetpack/: build.gradle
jetpack/src/main/: AndroidManifest.xml
model/: build.gradle  proguard-rules.pro
reactnative/: build.gradle  readme
reactnative/src/main/: AndroidManifest.xml
reactnative/src/main/assets/: index.android.bundle
repo/com/kevin/common/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
study_gradle/: build.gradle  upload.gradle
study_gradle/src/main/: AndroidManifest.xml
study_gradle2/: build.gradle  upload.gradle
study_gradle2/src/main/: AndroidManifest.xml
studygradle/: build.gradle
(+669 files in other folders)
